# tempylate

./: .gitignore  LICENSE  README.md  README.rst  licence  requirements.txt  setup.cfg  setup.py
docs/: authorship.md  authorship.rst  references.md
py_template/: __init__.py  py_template.py
tempylate/: __init__.py  __main__.py  activities.py  adhere.py  nominate.py  publisher.py  tempylate.py  utils.py
tempylate/adhere/: __init__.py  fylr.py
tempylate/data/: sample.json
tempylate/data/templates/: code_main.txt  code_module_consts.txt  licence_mit.txt
tempylate/docs/: authorship.rst  dev.rst  instructions.rst  readme.rst
tempylate/docs/logs/: config.json  config.yml
tempylate/fylr/: __main__.py  fylr.py
tempylate/fylr/templates/: module.py
tempylate/namepkg/: __init__.py  __main__.py  namepkg.py
tempylate/namepkg/data/: cache.json  pypi_records.json
tempylate/nominate/: __main__.py  namepkg.py
tempylate/requrl/: __init__.py  __main__.py  requrl.py
tempylate/tests/: test_nominate.py
