[metadata]
name = tempylate
version = 0.0.0dev1
author = Blake Molyneux
author_email = blake.molyneux@hotmail.com
description = A python project management package.
long_description = file: README.rst
url = https://github.com/blake-molyneux
project_urls =
    Bug Tracker = https://github.com/blake-molyneux/tempylate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python_version >= "3.6"
